--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-﻿cmake_minimum_required(VERSION 3.5)
+﻿cmake_minimum_required(VERSION 3.20)
 
 project(ElaFramework VERSION 0.1 LANGUAGES CXX)
 
@@ -11,7 +11,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 #在这里配置QT路径 例如 D:/Qt/6.6.2/msvc2019_64
-SET(QT_SDK_DIR D:/Qt/6.6.2/msvc2019_64 CACHE PATH "QT SDK DIR" FORCE)
+SET(QT_SDK_DIR D:/Qt/6.9.0/msvc2022_64 CACHE PATH "QT SDK DIR" FORCE)
 SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/Install CACHE PATH "Installation path" FORCE)
 
 list(APPEND CMAKE_PREFIX_PATH ${QT_SDK_DIR})
@@ -24,6 +24,7 @@ if (WIN32)
     add_subdirectory(ElaPacketIO)
 endif ()
 add_subdirectory(ElaWidgetToolsExample)
+add_subdirectory(ElaWidgetToolsDesigner)
 
 if (${QT_VERSION} VERSION_LESS 6.1.0)
     set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.ElaWidgetTools)
