정적 라이브러리 지원 추가

--- a/ElaWidgetTools/CMakeLists.txt
+++ b/ElaWidgetTools/CMakeLists.txt
@@ -8,11 +8,9 @@ set(CMAKE_AUTORCC ON)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
 add_definitions(-DELAWIDGETTOOLS_LIBRARY)
-option(ELAWIDGETTOOLS_BUILD_STATIC_LIB "Build static library." ON)
 
 FILE(GLOB ORIGIN *.h *.cpp)
 FILE(GLOB INCLUDE include/*.h)
@@ -33,6 +31,7 @@ set(PROJECT_SOURCES
 
 if (ELAWIDGETTOOLS_BUILD_STATIC_LIB)
     set(LIB_TYPE "STATIC")
+    add_definitions(-DELAWIDGETTOOLS_STATIC_LIBRARY)
 else ()
     set(LIB_TYPE "SHARED")
 endif ()
