--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/utf-8>")
 
-#在这里配置QT路径 例如 D:/Qt/6.6.2/msvc2019_64
-SET(QT_SDK_DIR D:/Qt/6.9.0/msvc2022_64 CACHE PATH "QT SDK DIR" FORCE)
+option(ELAPACKETIO_BUILD_STATIC_LIB "Build static library." ON)
+option(ELAWIDGETTOOLS_BUILD_STATIC_LIB "Build static library." ON)
+
+IF(DEFINED ENV{QT_PATH})
+    SET(QT_SDK_DIR $ENV{QT_PATH})
+ELSE()
+    SET(QT_SDK_DIR D:/Qt/6.9.0/msvc2022_64 CACHE PATH "QT SDK DIR" FORCE)
+ENDIF()
+
 SET(CMAKE_INSTALL_PREFIX ${CMAKE_SOURCE_DIR}/Install CACHE PATH "Installation path" FORCE)
 
 list(APPEND CMAKE_PREFIX_PATH ${QT_SDK_DIR})
